avanty.css: hide accidental body overflow, avoid scrollbars.   Scrollbars change body width and make interface glitchy.   Tall contents should reside in its own scrollbar-enabled elements. Label elements will not receive pointer events, let them pass-through. Default page styling: let them use all of the screen.

--- a/site/htdocs/avanty/style/avanty.css
+++ b/site/htdocs/avanty/style/avanty.css
@@ -13,6 +13,7 @@ body.avanty {
 	width: 100%;
 	height: 100vh;
 	background-color: white;
+	overflow: hidden;
 }
 
 h1, h2, h3, h4, h5 {
@@ -25,6 +26,7 @@ h1 {
 
 .avanty .label, label, h1, h2, h3, h4, h5 {
 	cursor: default;
+	pointer-events: none;
     user-select: none;
     -webkit-user-select: none;
 }
@@ -75,6 +77,12 @@ h1 {
 #hourglass img {
 	width: 48px;
 	height: 48px;
+}
+
+.page {
+	display: none;
+	width: 100%;
+	height: 100vh;
 }
 
 .section {
@@ -145,7 +153,7 @@ form label.error {
 	vertical-align: middle;
 }
 
-.shell-logout {
+.shell-lock {
 	position: absolute;
 	left: calc(100vw - 58px);
 }
